# sediment

./: .gitignore  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac  gen_profile_merge  gv2link  gv2link.py  make_sediment_rpmmacros  perf2gv  perf2gv.py  sediment.spec  write-dot-callgraph.py
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
docs/: .rpmmacros  Makefile  Makefile.am  Makefile.in  conf.py  gen_profile_merge.rst  gv2link.py.rst  gv2link.rst  index.rst  perf2gv.py.rst  perf2gv.rst  pop.rst
docs/examples/: postgresql16.gv  postgresql16.link  postgresql16.out  python_layout.patch
examples/: postgres12.gv  postgres12.link  postgres12.out
